--- a/recognizer/css/styles.css
+++ b/recognizer/css/styles.css
@@ -11,6 +11,16 @@
     font-size: 16px;
 }
 
+body {
+    background-image: linear-gradient(to bottom, rgba(112, 105, 74, 0.842), rgba(2, 56, 78, 0.945)), url('../images/background.jpg');
+    background-size: cover;
+    color: white;
+}
+
+h1 {
+    color: white;
+}
+
 .nav {
     background-color: #313652a6;
     font-family: Verdana, Geneva, sans-serif;
@@ -22,4 +32,11 @@
 
 .nav .nav-item .nav-link.active {
     color: white;
+}
+
+#divVideo {
+    margin: 0 auto;
+    border: 10px double #ddd;
+    margin: 0 auto;
+    width:fit-content;
 }
