--- a/trainer/css/styles.css
+++ b/trainer/css/styles.css
@@ -23,3 +23,9 @@
 .nav .nav-item .nav-link.active {
     color: white;
 }
+
+body {
+    background-image: linear-gradient(to bottom, rgba(112, 105, 74, 0.842), rgba(2, 56, 78, 0.945)), url('../images/background.jpg');
+    background-size: cover;
+    color: white;
+}
