--- a/recognizer/css/styles.css
+++ b/recognizer/css/styles.css
@@ -47,3 +47,14 @@ h1 {
 #productId td{
     vertical-align: middle !important;
 }
+
+.tableFix{
+  overflow-y: auto;
+  height:80vh;
+}
+
+.tableFix thead th{
+  position: sticky; top: 0;
+  background-color:#444444;
+  color:white;
+}
